--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -10,8 +10,8 @@
     "give_this_url_receive": "Give this address to the people sending you files:",
     "give_this_url_receive_stealth": "Give this address and HidServAuth line to the people sending you files:",
     "ctrlc_to_stop":  "Press Ctrl+C to stop the server",
-    "not_a_file": "{0:s} is not a valid file.",
-    "not_a_readable_file": "{0:s} is not a readable file.",
+    "not_a_file": "{0:s} This is not a valid file.",
+    "not_a_readable_file": "{0:s} This is not a readable file.",
     "no_filenames": "You must specify a list of files to share.",
     "no_available_port": "Could not start the Onion service as there was no available port.",
     "download_page_loaded": "Download page loaded",
