Use 'settings' rather than 'options' in the SettingsDialog labels

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -79,8 +79,8 @@
     "gui_settings_autoupdate_timestamp": "Last checked: {}",
     "gui_settings_autoupdate_timestamp_never": "Never",
     "gui_settings_autoupdate_check_button": "Check For Upgrades",
-    "gui_settings_general_label": "General options",
-    "gui_settings_sharing_label": "Sharing options",
+    "gui_settings_general_label": "General settings",
+    "gui_settings_sharing_label": "Sharing settings",
     "gui_settings_close_after_first_download_option": "Stop sharing after first download",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_bundled_option": "Use the Tor version that is bundled with OnionShare",
@@ -91,7 +91,7 @@
     "gui_settings_control_port_label": "Control port",
     "gui_settings_socket_file_label": "Socket file",
     "gui_settings_socks_label": "SOCKS port",
-    "gui_settings_authenticate_label": "Tor authentication options",
+    "gui_settings_authenticate_label": "Tor authentication settings",
     "gui_settings_authenticate_no_auth_option": "No authentication, or cookie authentication",
     "gui_settings_authenticate_password_option": "Password",
     "gui_settings_password_label": "Password",
@@ -166,7 +166,7 @@
     "receive_mode_received_file": "Received file: {}",
     "gui_mode_share_button": "Share Files",
     "gui_mode_receive_button": "Receive Files",
-    "gui_settings_receiving_label": "Receiving options",
+    "gui_settings_receiving_label": "Receiving settings",
     "gui_settings_downloads_label": "Save files to",
     "gui_settings_downloads_button": "Browse",
     "gui_settings_receive_allow_receiver_shutdown_checkbox": "Receive mode can be stopped by the sender",
