OnionSharings are undivided onion carings

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -12,43 +12,43 @@
     "ctrlc_to_stop":  "Press Ctrl+C to stop the server",
     "not_a_file": "{0:s} is not a valid file.",
     "not_a_readable_file": "{0:s} is not a readable file.",
-    "no_filenames": "Add files to share.",
+    "no_filenames": "Add files to OnionShare.",
     "no_available_port": "Could not start the onion service without a port to do it on.",
-    "download_page_loaded": "Download page loaded",
-    "other_page_loaded": "Address loaded",
+    "download_page_loaded": "OnionShare page loaded",
+    "other_page_loaded": "OnionShare address loaded",
     "close_on_timeout": "Timer expiry stopped OnionShare",
-    "closing_automatically": "Onionshare completed, now stopped",
+    "closing_automatically": "OnionShare completed, now stopped",
     "timeout_download_still_running": "Awaiting OnionShare completion",
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Wrong value, \"Port\" must be a regular number",
     "error_tails_unknown_root": "Unknown error with Tails root process",
     "systray_menu_exit": "Quit",
-    "systray_download_started_title": "OnionShare Started",
+    "systray_download_started_title": "OnionSharing",
     "systray_download_started_message": "Files underway",
-    "systray_download_completed_title": "OnionShare complete",
+    "systray_download_completed_title": "OnionSharing complete",
     "systray_download_completed_message": "The user has your files now",
     "systray_download_canceled_title": "OnionSharing stopped",
     "systray_download_canceled_message": "The user stopped reception",
     "help_local_only": "Do not attempt to use Tor: For development only",
-    "help_stay_open": "Keep onion service running after download has finished",
+    "help_stay_open": "Keep onion service running after OnionShare is completed",
     "help_shutdown_timeout": "Close onion service after a given amount of seconds",
     "help_stealth": "Make onion service stealthy (advanced)",
     "help_receive": "Receive files instead of sending them",
     "help_debug": "Log OnionShare errors to stdout, and log web errors to disk",
     "help_filename": "List of files or folders to share",
-    "help_config": "Path to a custom JSON config file (optional)",
-    "gui_drag_and_drop": "Drag and drop files and folders\nto start sharing",
+    "help_config": "Location of custom JSON config file (optional)",
+    "gui_drag_and_drop": "Drag and drop files and folders\nto start OnionSharing",
     "gui_add": "Add",
     "gui_delete": "Delete",
     "gui_choose_items": "Choose",
-    "gui_start_server": "Start Sharing",
-    "gui_stop_server": "Stop Sharing",
-    "gui_stop_server_shutdown_timeout": "Stop Sharing ({}s remaining)",
-    "gui_stop_server_shutdown_timeout_tooltip": "Share expires at {}",
-    "gui_copy_url": "Copy Address",
+    "gui_start_server": "Start OnionSharing",
+    "gui_stop_server": "Stop OnionSharing",
+    "gui_stop_server_shutdown_timeout": "Stop OnionSharing ({}s remaining)",
+    "gui_stop_server_shutdown_timeout_tooltip": "OnionShare expires at {}",
+    "gui_copy_url": "Copy OnionShare Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "File History",
-    "gui_downloads_window_tooltip": "Show/hide downloads",
+    "gui_downloads_window_tooltip": "Show/hide OnionSharings",
     "gui_no_downloads": "No downloads yet.",
     "gui_canceled": "Canceled",
     "gui_copied_url_title": "Copied",
@@ -66,10 +66,10 @@
     "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "OnionShare {0:s} | https://onionshare.org/",
     "gui_quit_title": "Not so fast",
-    "gui_quit_warning": "Quitting now means files underway wont finish.",
+    "gui_quit_warning": "Quitting now means files underway won't finish.",
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_dont_quit": "Cancel",
-    "error_rate_limit": "Too many guesses means someone could be trying to work out the address of your files. OnionShare has stopped the server. Start it again and send the new address to share them.",
+    "error_rate_limit": "Too many guesses means someone could be trying to work out the address of your files. OnionSharing has stopped. Start it again and send the new address to share them.",
     "zip_progress_bar_format": "Compressing files: %p%",
     "error_stealth_not_supported": "To create onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare requires at least Tor 0.2.7.1 and at least python3-stem 1.4.0.",
@@ -77,21 +77,21 @@
     "gui_settings_stealth_label": "Stealth (advanced)",
     "gui_settings_stealth_option": "Create onion services that are stealthy",
     "gui_settings_stealth_option_details": "This is more secure, but also more difficult to connect to.<br><a href=\"https://github.com/micahflee/onionshare/wiki/Stealth-Onion-Services\">More info</a>.",
-    "gui_settings_stealth_hidservauth_string": "Having saved your private key for reuse, means you can\nclick to copy your HidServAuth.",
+    "gui_settings_stealth_hidservauth_string": "Having saved your private key for reuse, means you can now\nclick to copy your HidServAuth.",
     "gui_settings_autoupdate_label": "Check for new versions",
     "gui_settings_autoupdate_option": "Notify me when a new version is available",
     "gui_settings_autoupdate_timestamp": "Last checked: {}",
     "gui_settings_autoupdate_timestamp_never": "Never",
     "gui_settings_autoupdate_check_button": "Check For New Versions",
-    "gui_settings_sharing_label": "Sharing options",
-    "gui_settings_close_after_first_download_option": "Stop sharing after first download",
+    "gui_settings_sharing_label": "OnionSharing options",
+    "gui_settings_close_after_first_download_option": "Stop after first OnionSharing",
     "gui_settings_systray_notifications": "Show desktop notifications",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_bundled_option": "Use the Tor version built into OnionShare",
     "gui_settings_connection_type_automatic_option": "Attempt auto-configuration with Tor Browser",
     "gui_settings_connection_type_control_port_option": "Connect using control port",
     "gui_settings_connection_type_socket_file_option": "Connect using socket file",
-    "gui_settings_connection_type_test_button": "Test Tor Settings",
+    "gui_settings_connection_type_test_button": "Test Tor Connection",
     "gui_settings_control_port_label": "Control port",
     "gui_settings_socket_file_label": "Socket file",
     "gui_settings_socks_label": "SOCKS port",
@@ -100,7 +100,7 @@
     "gui_settings_authenticate_password_option": "Password",
     "gui_settings_authenticate_cookie_option": "Cookie",
     "gui_settings_password_label": "Password",
-    "gui_settings_cookie_label": "Cookie folder",
+    "gui_settings_cookie_label": "Cookie location",
     "gui_settings_tor_bridges": "Tor bridge support",
     "gui_settings_tor_bridges_no_bridges_radio_option": "Don't use bridges",
     "gui_settings_tor_bridges_obfs4_radio_option": "Use built-in obfs4 pluggable transports",
@@ -131,10 +131,10 @@
     "settings_test_success": "Connected to the Tor controller.\n\nTor version: {}\nSupports ephemeral onion services: {}.\nSupports onion services that are stealthy: {}.",
     "error_tor_protocol_error": "Could not communicate with the Tor controller.\nIf you are using Whonix, check out https://www.whonix.org/wiki/onionshare to make OnionShare work.",
     "connecting_to_tor": "Connecting to the Tor network",
-    "update_available": "New version of OnionShare. <a href='{}'>Click here</a> to download it.<br><br>You have {} and the latest is {}.",
+    "update_available": "New version of OnionShare. <a href='{}'>Click here</a> to get it.<br><br>You have {} and the latest is {}.",
     "update_error_check_error": "Could not check for new versions: Maybe you're not connected to Tor, or the OnionShare website is down?",
-    "update_error_invalid_latest_version": "Could not check for new versions: The OnionShare website is saying the latest version is the unrecognizable '{}'.",
-    "update_not_available": "You are running the latest version of OnionShare.",
+    "update_error_invalid_latest_version": "Could not check for new versions: The OnionShare website is saying the latest version is the unrecognizable '{}'…",
+    "update_not_available": "You are running the latest OnionShare.",
     "gui_tor_connection_ask": "Would you like to open the settings to troubleshoot connecting to Tor?",
     "gui_tor_connection_ask_open_settings": "Yes",
     "gui_tor_connection_ask_quit": "Quit",
@@ -143,22 +143,22 @@
     "gui_tor_connection_lost": "Disconnected from Tor.",
     "gui_server_started_after_timeout": "The expiry timer ran out before the server started.\nPlease start a new share.",
     "gui_server_timeout_expired": "The expiry timer ran out.\nPlease restart it to start sharing.",
-    "share_via_onionshare": "Share via OnionShare",
+    "share_via_onionshare": "OnionShare it",
     "gui_save_private_key_checkbox": "Use a persistent address\n(unchecking will delete any saved addresses)",
-    "gui_url_description": "<b>Anyone</b> with this link can download your files using the <b>Tor Browser</b>: <img src='{}' />",
+    "gui_url_description": "<b>Anyone</b> with this OnionShare address your files using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_url_label_persistent": "This share will not expire automatically unless a timer is set.<br><br>Every subsequent share will be available at the same address (to use one-time addresses, turn off \"Persistence\" in the settings)",
     "gui_url_label_stay_open": "Add a timer to automatically expire the share.",
-    "gui_url_label_onetime": "This share expires after being downloaded",
-    "gui_url_label_onetime_and_persistent": "This share expires after being downloaded<br><br>Every subsequent share will be available at the same address (to use one-time addresses, turn off \"Persistence\" in the settings)",
-    "gui_status_indicator_stopped": "Ready to Share",
-    "gui_status_indicator_working": "Starting…",
-    "gui_status_indicator_started": "Sharing",
+    "gui_url_label_onetime": "This OnionShare expires after one OnionSharing",
+    "gui_url_label_onetime_and_persistent": "This OnionShare expires after completion<br><br>Every subsequent OnionShare will be available at the same OnionShare address (to use one-time addresses, turn off \"Persistence\" in the settings)",
+    "gui_status_indicator_stopped": "Ready to OnionShare",
+    "gui_status_indicator_working": "Hyping…",
+    "gui_status_indicator_started": "OnionSharing",
     "gui_file_info": "{} Files, {}",
     "gui_file_info_single": "{} File, {}",
     "info_in_progress_downloads_tooltip": "{} underway",
     "info_completed_downloads_tooltip": "{} completed",
-    "error_cannot_create_downloads_dir": "Error creating \"Downloads\" folder: {}",
-    "error_downloads_dir_not_writable": "The \"Downloads\" folder is write protected: {}",
+    "error_cannot_create_downloads_dir": "Error creating \"OnionShare\" folder: {}",
+    "error_downloads_dir_not_writable": "The \"OnionShare\" folder is write protected: {}",
     "receive_mode_downloads_dir": "Files sent to you appear in this folder: {}",
     "receive_mode_warning": "Warning: Some files can take control of your computer if you open them! Only open files from people you trust to know what they are doing.",
     "receive_mode_received_file": "Received file: {}"
