--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -33,9 +33,9 @@
     "help_stay_open": "Keep onion service running after OnionShare is completed",
     "help_shutdown_timeout": "Close onion service after a given amount of seconds",
     "help_stealth": "Make onion service stealthy (advanced)",
-    "help_receive": "Receive files instead of sending them",
+    "help_receive": "Set your onion to reception instead of OnionSharing",
     "help_debug": "Log OnionShare errors to stdout, and log web errors to disk",
-    "help_filename": "List of files or folders to share",
+    "help_filename": "List of files or folders to OnionShare",
     "help_config": "Location of custom JSON config file (optional)",
     "gui_drag_and_drop": "Drag and drop files and folders\nto start OnionSharing",
     "gui_add": "Add",
@@ -61,7 +61,7 @@
     "error_hs_dir_cannot_create": "Cannot create onion service dir {0:s}",
     "error_hs_dir_not_writable": "Onion service dir {0:s} is write protected",
     "using_ephemeral": "Starting ephemeral Tor onion service and awaiting publication",
-    "gui_download_progress_complete": "%p%, Time Elapsed: {0:s}",
+    "gui_download_progress_complete": "%p%, {0:s} elapsed.",
     "gui_download_progress_starting": "{0:s}, %p% (calculating ETA)",
     "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "OnionShare {0:s} | https://onionshare.org/",
@@ -70,7 +70,7 @@
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_dont_quit": "Cancel",
     "error_rate_limit": "Too many guesses means someone could be trying to work out the address of your files. OnionSharing has stopped. Start it again and send the new address to share them.",
-    "zip_progress_bar_format": "Compressing files: %p%",
+    "zip_progress_bar_format": "Making files smaller: %p%",
     "error_stealth_not_supported": "To create onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare requires at least Tor 0.2.7.1 and at least python3-stem 1.4.0.",
     "gui_settings_window_title": "Settings",
