Make what's this links use the same string, and change their style

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -71,8 +71,8 @@
     "error_stealth_not_supported": "To create stealth onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare requires at least Tor 0.2.7.1 and at least python3-stem 1.4.0.",
     "gui_settings_window_title": "Settings",
+    "gui_settings_whats_this": "<a href='{0:s}'>what's this?</a>",
     "gui_settings_stealth_option": "Create stealth onion services (legacy)",
-    "gui_settings_stealth_option_details": "(<a href=\"https://github.com/micahflee/onionshare/wiki/Stealth-Onion-Services\">what's this?</a>)",
     "gui_settings_stealth_hidservauth_string": "You have saved the private key for reuse, so your HidServAuth string is also reused.\nClick below to copy the HidServAuth.",
     "gui_settings_autoupdate_label": "Check for upgrades",
     "gui_settings_autoupdate_option": "Notify me when upgrades are available",
@@ -109,7 +109,6 @@
     "gui_settings_button_cancel": "Cancel",
     "gui_settings_button_help": "Help",
     "gui_settings_shutdown_timeout_checkbox": "Use auto-stop timer",
-    "gui_settings_shutdown_timeout_details": "(<a href=\"https://github.com/micahflee/onionshare/wiki/Using-the-Auto-Stop-Timer\">what's this?</a>)",
     "gui_settings_shutdown_timeout": "Stop the share at:",
     "settings_saved": "Settings saved to {}",
     "settings_error_unknown": "Can't connect to Tor controller because the settings don't make sense.",
@@ -140,9 +139,7 @@
     "gui_server_timeout_expired": "The chosen timeout has already expired.\nPlease update the timeout and then you may start sharing.",
     "share_via_onionshare": "Share via OnionShare",
     "gui_use_legacy_v2_onions_checkbox": "Use legacy addresses",
-    "gui_use_legacy_v2_onions_label": "(<a href=\"https://github.com/micahflee/onionshare/wiki/Legacy-Addresses\">what's this?</a>)",
     "gui_save_private_key_checkbox": "Use a persistent address (legacy)",
-    "gui_save_private_key_label": "(<a href=\"https://github.com/micahflee/onionshare/wiki/Using-a-Persistent-URL\">what's this?</a>)",
     "gui_share_url_description": "<b>Anyone</b> with this link can <b>download</b> your files using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_receive_url_description": "<b>Anyone</b> with this link can <b>upload</b> files to your computer using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_url_label_persistent": "This share will not expire automatically unless a timer is set.<br><br>Every share will have the same address (to use one-time addresses, disable persistence in Settings)",
@@ -175,7 +172,6 @@
     "gui_settings_downloads_button": "Browse",
     "gui_settings_receive_allow_receiver_shutdown_checkbox": "Receive mode can be stopped by the sender",
     "gui_settings_public_mode_checkbox": "Public mode",
-    "gui_settings_public_mode_details": "(<a href=\"https://github.com/micahflee/onionshare/wiki/Public-Mode\">what's this?</a>)",
     "systray_close_server_title": "OnionShare Server Closed",
     "systray_close_server_message": "A user closed the server",
     "systray_page_loaded_title": "OnionShare Page Loaded",
