--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -181,6 +181,7 @@
     "gui_uploads": "Upload History",
     "gui_uploads_window_tooltip": "Show/hide uploads",
     "gui_no_uploads": "No uploads yet.",
+    "gui_clear_history": "Clear history",
     "gui_upload_in_progress": "Upload Started {}",
     "gui_upload_finished_range": "Uploaded {} to {}",
     "gui_upload_finished": "Uploaded {}",
