No "expired", Allowed sharing timeframe

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -10,7 +10,7 @@
     "not_a_readable_file": "{0:s} is not a readable file.",
     "no_available_port": "Could not find an available port to start the onion service",
     "other_page_loaded": "Inbox address loaded",
-    "close_on_timeout": "Stopped because timeframe expired",
+    "close_on_timeout": "Stopped because timeframe ran out",
     "closing_automatically": "Stopped because you have the complete share",
     "timeout_download_still_running": "Awaiting completion of share transfer to you",
     "large_filesize": "Warning: Sending a large share could take hours",
@@ -38,7 +38,7 @@
     "gui_share_start_server": "Share",
     "gui_share_stop_server": "Stop",
     "gui_share_stop_server_shutdown_timeout": "Stop sharing ({}s remaining)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Allowed share timeframe ends {}",
+    "gui_share_stop_server_shutdown_timeout_tooltip": "Allowed sharing timeframe ends {}",
     "gui_receive_start_server": "Receive",
     "gui_receive_stop_server": "Stop",
     "gui_receive_stop_server_shutdown_timeout": "Stop receiving ({}s remaining)",
@@ -105,7 +105,7 @@
     "gui_settings_button_cancel": "Cancel",
     "gui_settings_button_help": "Help",
     "gui_settings_shutdown_timeout_checkbox": "Stop sharing after a given timeframe",
-    "gui_settings_shutdown_timeout": "Stop sharing after:",
+    "gui_settings_shutdown_timeout": "Allowed sharing timeframe:",
     "settings_saved": "Settings saved in {}",
     "settings_error_unknown": "Can't connect to Tor controller because it knows your settings aren't making sense.",
     "settings_error_automatic": "Could not connect to the Tor controller. The Tor Browser (available from https://www.torproject.org/)\nneeds to be running in the background.",
@@ -132,8 +132,8 @@
     "gui_tor_connection_error_settings": "Try changing how OnionShare connects to the Tor network in the settings.",
     "gui_tor_connection_canceled": "Could not connect to Tor.\n\nEnsure you are connected to the Internet, then re-open OnionShare and set up its connection to Tor.",
     "gui_tor_connection_lost": "Disconnected from Tor.",
-    "gui_server_started_after_timeout": "The set sharing timeframe ran out before the server started.\nPlease make a new share.",
-    "gui_server_timeout_expired": "The chosen sharing timeframe has already expired.\nPlease update it to start sharing.",
+    "gui_server_started_after_timeout": "The chosen allowed sharing timeframe ran out before the server started.\nPlease make a new share.",
+    "gui_server_timeout_expired": "The chosen allowed sharing timeframe already ran out.\nPlease update it to start sharing.",
     "share_via_onionshare": "OnionShare it",
     "gui_use_legacy_v2_onions_checkbox": "Use legacy addresses",
     "gui_save_private_key_checkbox": "Use a persistent address (legacy)",
